Good use of hackathon coding time.   Weeeee.

--- a/src/netrunner/card.ng.html
+++ b/src/netrunner/card.ng.html
@@ -1,9 +1,12 @@
 <div class="card-cmp">
-  <span *ngIf="card">
-    <span class="col-md-3">{{card.title}}</span>
-    <span class="col-md-2">{{card.faction_code}}</span>
-    <span class="col-md-2">{{card?.pack?.cycle?.name}}</span>
-    <span class="col-md-2">{{card.faction_cost}}</span>
-  </span>
-  <!-- Could add the image but that is a lot of extra size & data -->
+  <div *ngIf="card">
+    <div class="card-details" [class.card-legal]="card?.can_play" [class.card-banned]="!card.can_play">
+      <span class="col-md-3 card-detail">{{card.title}}</span>
+      <span class="col-md-2 card-detail">{{card.faction_code}}</span>
+      <span class="col-md-2 card-detail">{{card?.pack?.cycle?.name}}</span>
+      <span class="col-md-2 card-detail">{{card.faction_cost}}</span>
+      <span class="col-md-1 card-detail">{{card.can_play ? "Legal" : "Banned"}}</span>
+      <!-- Could add the image but that is a lot of extra size & data, probably just on click / timeout loop -->
+    </div>
+  </div>
 </div>
