--- a/src/netrunner/netrunner.ng.html
+++ b/src/netrunner/netrunner.ng.html
@@ -8,6 +8,7 @@
        [ngModel]="searchText"
        (ngModelChange)="searchCards($event)"
       >
+      <span class="error" *ngIf="errMsg">{{errMsg}}</span>
     </span>
 
     <label>
