--- a/src/netrunner/netrunner.ng.html
+++ b/src/netrunner/netrunner.ng.html
@@ -19,44 +19,55 @@
       <input name="searchFullText" type="radio" [value]="true"  [(ngModel)]="searchFullText">
       Full Text
     </label>
+    <label>
+      <button type="button" (click)="rotationStateChange()">
+        {{rotationStates[rotationState]}}
+      </button>
+    </label>
   </form>
+
 
   <div>
     CORP | Factions | Types
     <div class="corp-factions">
-      <button type="button" class="btn btn-xs btn-corp-faction">
-        All
-      </button>
-      <button type="button" class="btn btn-xs btn-corp-faction" 
-        [class.btn-primary]="faction.selected"
-        *ngFor="let faction of corpFactions"
-        (click)="toggleFaction(faction)"
-      >{{ faction.name }}</button>
+      <span *ngFor="let faction of corpFactions">
+        <input type="checkbox" class="btn btn-xs btn-corp-faction" 
+          [checked]="factionSelection[faction.code]"
+          [class.btn-primary]="faction.selected"
+          (click)="toggleFaction(faction)"
+        />{{ faction.name }}
+      </span>
     </div>
     <div class="corp-types">
-      <button  type="btn btn-xs btn-corp-type"
-        [class.btn-primary]="type.selected"
-        *ngFor="let type of corpTypes"
-        (click)="toggleType(type)"
-      >{{ type.name }}</button>
+      <span *ngFor="let type of corpTypes">
+        <input type="checkbox" class="btn btn-xs btn-corp-type"
+          [checked]="typeSelection[type.code]"
+          [class.btn-primary]="type.selected"
+          (click)="toggleType(type)"
+        />{{ type.name }}
+      </span>
     </div>
   </div>
 
   <div>
     Runner 
     <div class="runner-factions"> 
-      <button type="button" class="btn btn-xs btn-runner-type"
-        [class.btn-primary]="faction.selected"
-        (click)="toggleFaction(faction)"
-        *ngFor="let faction of runnerFactions"
-      >{{ faction.name }}</button>
+      <span *ngFor="let faction of runnerFactions">
+        <input type="checkbox" class="btn btn-xs btn-runner-type"
+          [checked]="factionSelection[faction.code]"
+          [class.btn-primary]="faction.selected"
+          (click)="toggleFaction(faction)"
+        />{{ faction.name }}
+      </span>
     </div>
     <div class="runner-types">
-      <button type="button" class="btn btn-xs btn-runner-types"
-        [class.btn-primary]="type.selected"
-        *ngFor="let type of runnerTypes"
-        (click)="toggleType(type)"
-      >{{ type.name }}</button>
+      <span *ngFor="let type of runnerTypes">
+        <input type="checkbox" class="btn btn-xs btn-runner-types"
+          [checked]="typeSelection[type.code]"
+          [class.btn-primary]="type.selected"
+          (click)="toggleType(type)"
+        />{{ type.name }}
+      </span>
     </div>
   </div>
 
@@ -72,10 +83,23 @@
     </div>
   </div>
 
-  List Cards
-  <div *ngFor="let c of listCards">
-    {{c.title}}
+  <div class="nr-search-filter">
+    <div class="cycle-selection">
+      Cycle Selection
+      <div *ngIf="cycles">
+        <ul *ngFor="let cycle of cycles">
+          <input type="checkbox" [checked]="cycleSelection[cycle.code]" 
+            (change)="toggleCycle(cycle)"/>
+            {{cycle.name}} : ({{cycle.size}}) Rotated: {{cycle.rotated}}
+            <li *ngFor="let pack of (packListing[cycle.code] || [])">
+              <input type="checkbox" [checked]="packSelection[pack.code]"
+                (change)="togglePack(pack)"
+              />
+              {{pack.name}} - {{pack.date_release}} : ({{pack.size}}) 
+            </li>
+        </ul>
+      </div>
+    </div>
+
   </div>
-
-
 </div>
