--- a/src/netrunner/netrunner.ng.html
+++ b/src/netrunner/netrunner.ng.html
@@ -19,53 +19,112 @@
       <input name="searchFullText" type="radio" [value]="true"  [(ngModel)]="searchFullText">
       Full Text
     </label>
-    <label>
-      <button type="button" (click)="rotationStateChange()">
-        {{rotationStates[rotationState]}}
-      </button>
-    </label>
   </form>
 
 
-  <div>
-    CORP | Factions | Types
-    <div class="corp-factions">
-      <span *ngFor="let faction of corpFactions">
-        <mat-checkbox class="corp-faction-checkbox" 
-          [(ngModel)]="factionSelection[faction.code]"
-          (click)="toggleFaction(faction)"
-        >{{ faction.name }}</mat-checkbox> 
-      </span>
-    </div>
-    <div class="corp-types">
-      <span *ngFor="let type of corpTypes">
-        <mat-checkbox class="corp-faction-checkbox" 
-          [(ngModel)]="typeSelection[type.code]"
-          (click)="toggleType(type)"
-        >{{ type.name }}</mat-checkbox>
-      </span>
-    </div>
-  </div>
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title> <h3>Factions & Types</h3> </mat-panel-title>
+      <mat-panel-description>
+        <button mat-raised-button type="button" color="primary"
+          (click)="factionToggle($event, 'Corp')"
+        >Corp</button>
+        <button mat-raised-button type="button" color="warn"
+          (click)="factionToggle($event, 'Runner')"
+        >Runner</button>
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+        <button mat-raised-button type="button" accent="primary"
+          (click)="toggleSettings([factionSelection, typeSelection], true)"
+        >All</button>
+        <button mat-raised-button type="button" 
+          (click)="toggleSettings([factionSelection, typeSelection], false)"
+        >None</button>
 
-  <div>
-    Runner 
-    <div class="runner-factions"> 
-      <span *ngFor="let faction of runnerFactions">
-         <mat-checkbox class="runner-faction-checkbox"
-           [(ngModel)]="factionSelection[faction.code]"
-           (click)="toggleFaction(faction)"
-        >{{ faction.name }}</mat-checkbox>
-      </span>
+        <div>
+          CORP | Factions | Types
+          <div class="corp-factions">
+            <span *ngFor="let faction of corpFactions">
+              <mat-checkbox class="corp-faction-checkbox" 
+                [(ngModel)]="factionSelection[faction.code]"
+                (click)="toggleFaction(faction)"
+              >{{ faction.name }}</mat-checkbox> 
+            </span>
+          </div>
+          <div class="corp-types">
+            <span *ngFor="let type of corpTypes">
+              <mat-checkbox class="corp-faction-checkbox" 
+                [(ngModel)]="typeSelection[type.code]"
+                (click)="toggleType(type)"
+              >{{ type.name }}</mat-checkbox>
+            </span>
+          </div>
+        </div>
+
+        <div>
+          Runner 
+          <div class="runner-factions"> 
+            <span *ngFor="let faction of runnerFactions">
+               <mat-checkbox class="runner-faction-checkbox"
+                 [(ngModel)]="factionSelection[faction.code]"
+                 (click)="toggleFaction(faction)"
+              >{{ faction.name }}</mat-checkbox>
+            </span>
+          </div>
+          <div class="runner-types">
+            <span *ngFor="let type of runnerTypes">
+               <mat-checkbox class="runner-faction-checkbox"
+                [(ngModel)]="typeSelection[type.code]"
+                (click)="toggleType(type)"
+              >{{ type.name }}</mat-checkbox>
+            </span>
+          </div>
+        </div>
+  </mat-expansion-panel>
+
+  <mat-expansion-panel>
+    <mat-expansion-panel-header>
+      <mat-panel-title> <h3>Cycle Selection</h3> </mat-panel-title>
+      <mat-panel-description>
+        <button mat-raised-button type="button" 
+          color="accent"
+          (click)="rotationStateChange(rotationState, $event)">
+          {{rotationStates[rotationState]}}
+        </button>
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+
+    <div class="nr-search-filter">
+      <button mat-raised-button type="button" 
+        color="primary"
+        (click)="toggleSettings([cycleSelection, packSelection], true, $event)"
+      >All</button>
+      <button mat-raised-button type="button" 
+        (click)="toggleSettings([cycleSelection, packSelection], false, $event)"
+      >None</button>
+      <button mat-raised-button type="button" 
+        color="accent"
+        (click)="rotationStateChange(rotationState, $event)"
+      >{{rotationStates[rotationState]}}</button>
+      <div class="cycle-selection">
+        <div *ngIf="cycles">
+          <ul *ngFor="let cycle of cycles">
+            <mat-checkbox class="cycle-selection"
+              [(ngModel)]="cycleSelection[cycle.code]" 
+              (change)="toggleCycle(cycle)"
+            >{{cycle.name}} : ({{cycle.size}}) Rotated: {{cycle.rotated}}</mat-checkbox>
+              <li *ngFor="let pack of (packListing[cycle.code] || [])">
+                <mat-checkbox class="pack-selection"
+                  [(ngModel)]="packSelection[pack.code]"
+                  (change)="togglePack(pack)"
+                >{{pack.name}} - {{pack.date_release}} : ({{pack.size}})</mat-checkbox>
+              </li>
+          </ul>
+        </div>
+      </div>
     </div>
-    <div class="runner-types">
-      <span *ngFor="let type of runnerTypes">
-         <mat-checkbox class="runner-faction-checkbox"
-          [(ngModel)]="typeSelection[type.code]"
-          (click)="toggleType(type)"
-        >{{ type.name }}</mat-checkbox>
-      </span>
-    </div>
-  </div>
+  </mat-expansion-panel>
+
 
   <div>
     Total Cards: {{allCards?.length}}
@@ -82,24 +141,6 @@
     </div>
   </div>
 
-  <div class="nr-search-filter">
-    <div class="cycle-selection">
-      Cycle Selection
-      <div *ngIf="cycles">
-        <ul *ngFor="let cycle of cycles">
-          <mat-checkbox class="cycle-selection"
-            [(ngModel)]="cycleSelection[cycle.code]" 
-            (change)="toggleCycle(cycle)"
-          >{{cycle.name}} : ({{cycle.size}}) Rotated: {{cycle.rotated}}</mat-checkbox>
-            <li *ngFor="let pack of (packListing[cycle.code] || [])">
-              <mat-checkbox class="pack-selection"
-                [(ngModel)]="packSelection[pack.code]"
-                (change)="togglePack(pack)"
-              >{{pack.name}} - {{pack.date_release}} : ({{pack.size}})</mat-checkbox>
-            </li>
-        </ul>
-      </div>
-    </div>
 
-  </div>
+
 </div>
