Actually fix the change vs click bug.

--- a/src/netrunner/card.ng.html
+++ b/src/netrunner/card.ng.html
@@ -12,7 +12,7 @@
       </div>
 
 
-      <span class="card-img" *ngIf="false && showImage && card?.image_url">
+      <span class="card-img" *ngIf="showImage && card?.image_url">
         <img [src]="card.image_url">
       </span>
 
