--- a/src/netrunner/netrunner.ng.html
+++ b/src/netrunner/netrunner.ng.html
@@ -18,10 +18,16 @@
     <div class="nr-panel view-cards-panel">
       <div *ngIf="matchedCards?.length > 0">
         <div *ngFor="let card of cardSegment">
+
+          <!-- TODO:Move all this into the card itself? -->
           <div class="card-{{card.faction_code}}">
             <mat-card>
             <mat-card-title class="card-title">
-              {{card.title}} <i class="icon icon-{{card.faction_code}}"></i>
+              <i class="icon icon-{{card.faction_code}}"></i>{{card.title}} 
+              <span *ngIf="card.cost !== undefined" 
+                class="card-cost"
+                title="Cost to play the card"
+              >{{card.cost}}</span>
             </mat-card-title>
             <card-cmp [card]="card" [showImage]="showImages"></card-cmp>
           </mat-card>
